Archive2/03/5a38dbeeba29b0/output
main.cpp: In function 'int main()':
main.cpp:6:8: error: cannot convert 'StructureName [10]' to 'int*' in assignment
     ptr=objectname;
        ^
